syntax = "proto3";

package pb;

option go_package = "github.com/PYTNAG/simpletodo/pb";

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    int32 user_id = 1;
}