syntax = "proto3";

package pb;

option go_package = "github.com/PYTNAG/simpletodo/pb";

message RehashUserRequest {
    int32 user_id = 1;
    string new_password = 2;
}