syntax = "proto3";

package pb;

// users
import "rpc_create_user.proto";
import "rpc_delete_user.proto";
import "rpc_rehash_user.proto";
import "rpc_login_user.proto";

// lists
import "list.proto";
import "rpc_create_list.proto";
import "rpc_get_lists.proto";
import "rpc_delete_list.proto";

// tasks
import "task.proto";
import "rpc_create_task.proto";
import "rpc_get_tasks.proto";
import "rpc_delete_task.proto";
import "rpc_update_task.proto";

import "google/protobuf/empty.proto";

option go_package = "github.com/PYTNAG/simpletodo/pb";

service SimpleTODO {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {}
    rpc RehashUser (RehashUserRequest) returns (google.protobuf.Empty) {}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}

    rpc CreateList (CreateListRequest) returns (google.protobuf.Empty) {}
    rpc GetLists (GetListsRequest) returns (stream List) {}
    rpc DeleteList (DeleteListRequest) returns (google.protobuf.Empty) {}

    rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse) {}
    rpc GetTasks (GetTasksRequest) returns (stream Task) {}
    rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty) {}
    rpc UpdateTask (UpdateTaskRequest) returns (google.protobuf.Empty) {}
}